# ans-pdf-scraper

./: .gitignore  README.md  pyproject.toml
src/: compress.py  main.py  scraper.py
src/utils/: clean_pdfs.py  compress.py  config.py  download_pdf.py  download_pdfs.py
