[project]
name = "test-web-scraping-ans"
version = "0.1.0"
description = ""
authors = [
    {name = "MarcoAntonioGritti",email = "m9946658@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.26.0"

